[gd_scene load_steps=19 format=2]

[ext_resource path="res://Fonts/ConcertOne-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Scenes/WaterContainer.tscn" type="PackedScene" id=2]
[ext_resource path="res://Sprites/bgBlu.png" type="Texture" id=3]
[ext_resource path="res://Scenes/MainMenu.gd" type="Script" id=4]
[ext_resource path="res://Fonts/NewArcades.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://Scenes/Tutorial.gd" type="Script" id=6]
[ext_resource path="res://Fonts/Cutesy.ttf" type="DynamicFontData" id=7]
[ext_resource path="res://SoundFX/bgMusic.wav" type="AudioStream" id=8]
[ext_resource path="res://SoundFX/Draining-Water-Down-Sink-CloseDistance-1-www.FesliyanStudios.com (online-audio-converter.com).wav" type="AudioStream" id=9]

[sub_resource type="DynamicFont" id=1]
size = 100
outline_color = Color( 0.545098, 1, 0.576471, 1 )
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 65
font_data = ExtResource( 1 )

[sub_resource type="Animation" id=3]
length = 1.5
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.1, 1 ),
"transitions": PoolRealArray( 2, 2 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0.137255 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=4]
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=5]
length = 5.0
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 5 ),
"transitions": PoolRealArray( 0.5, 1 ),
"update": 0,
"values": [ Vector2( 0, 100 ), Vector2( 0, -4500 ) ]
}

[sub_resource type="Animation" id=6]
length = 3.0
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ), Color( 0.341176, 0, 0.388235, 0.45098 ) ]
}

[sub_resource type="DynamicFont" id=7]
size = 60
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=8]
size = 40
outline_color = Color( 0.898039, 1, 0.882353, 1 )
font_data = ExtResource( 7 )

[sub_resource type="Animation" id=9]
resource_name = "Load"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 2, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.4, 0.5 ),
"transitions": PoolRealArray( 2, 2, 2 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, -5 ), Vector2( 0, 0 ) ]
}

[node name="MainMenu" type="Node2D"]
script = ExtResource( 4 )

[node name="Background" type="Sprite" parent="."]
position = Vector2( 514.76, 302.216 )
scale = Vector2( 1.4, 1.4 )
texture = ExtResource( 3 )

[node name="GameTitle" type="Label" parent="."]
margin_left = 150.808
margin_top = 148.872
margin_right = 886.808
margin_bottom = 298.872
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 1, 0.623529, 1 )
text = "WorldyouRather?"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
modulate = Color( 1, 1, 1, 0.400871 )
margin_left = 203.863
margin_top = 463.755
margin_right = 847.863
margin_bottom = 514.755
custom_fonts/font = SubResource( 2 )
text = "click anywhere to play"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="Label"]
autoplay = "Blinking"
anims/Blinking = SubResource( 3 )
anims/FastBlinking = SubResource( 4 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )
autoplay = true

[node name="UpContainer" type="Node2D" parent="."]
position = Vector2( 0, 100 )

[node name="Container" parent="UpContainer" instance=ExtResource( 2 )]
position = Vector2( 530.999, 762.419 )
scale = Vector2( 2, 7 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="UpContainer"]
"anims/Drag Up" = SubResource( 5 )

[node name="Fade" type="ColorRect" parent="."]
modulate = Color( 0, 0, 0, 0 )
margin_left = -140.188
margin_top = -47.4134
margin_right = 1174.81
margin_bottom = 671.587
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="Fade"]
anims/Fade = SubResource( 6 )

[node name="Tutorial" type="Node2D" parent="."]
modulate = Color( 1, 1, 1, 0 )
script = ExtResource( 6 )

[node name="YellowCard" type="Label" parent="Tutorial"]
margin_left = 293.088
margin_top = 140.776
margin_right = 530.088
margin_bottom = 195.776
custom_fonts/font = SubResource( 7 )
custom_colors/font_color = Color( 1, 0.984314, 0.47451, 1 )
text = "yellow cards"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GreenCard" type="Label" parent="Tutorial"]
margin_left = 305.065
margin_top = 206.14
margin_right = 542.065
margin_bottom = 261.14
custom_fonts/font = SubResource( 7 )
custom_colors/font_color = Color( 0.490196, 1, 0.541176, 1 )
text = "green cards"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Situation" type="Label" parent="Tutorial"]
margin_left = 503.814
margin_top = 140.472
margin_right = 740.814
margin_bottom = 195.472
custom_fonts/font = SubResource( 7 )
custom_colors/font_color = Color( 1, 0.996078, 0.870588, 1 )
text = "= Situation"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Choice" type="Label" parent="Tutorial"]
margin_left = 507.156
margin_top = 204.882
margin_right = 744.156
margin_bottom = 259.882
custom_fonts/font = SubResource( 7 )
custom_colors/font_color = Color( 1, 0.996078, 0.870588, 1 )
text = "= choice"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Text" type="Label" parent="Tutorial"]
margin_left = 147.45
margin_top = 358.742
margin_right = 867.45
margin_bottom = 413.742
custom_fonts/font = SubResource( 7 )
custom_colors/font_color = Color( 1, 0.996078, 0.870588, 1 )
text = "try not to make the water fill the screen !"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Text2" type="Label" parent="Tutorial"]
margin_left = 416.806
margin_top = 416.556
margin_right = 646.806
margin_bottom = 471.556
custom_fonts/font = SubResource( 7 )
custom_colors/font_color = Color( 1, 0.996078, 0.870588, 1 )
text = "Do your best !"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Tutorial"]
margin_left = 367.442
margin_top = 563.987
margin_right = 674.442
margin_bottom = 600.987
custom_fonts/font = SubResource( 8 )
text = "click anywhere to continue"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Load" type="AnimationPlayer" parent="Tutorial"]
anims/Load = SubResource( 9 )

[node name="Woosh" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 9 )

[node name="Timer" type="Timer" parent="."]
wait_time = 2.5
one_shot = true
[connection signal="finished" from="AudioStreamPlayer" to="." method="_on_AudioStreamPlayer_finished"]
[connection signal="animation_finished" from="UpContainer/AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="animation_finished" from="Fade/AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
